@@ -1,5 +1,6 @@
 defaulticon.png
 imagetoobig.gif
+arrowhead.png
 apply.png
 revert.png
 loadned.png
